--- a/index.html
+++ b/index.html
@@ -9,18 +9,22 @@
     body {
       margin: 0;
       font-family: Arial, Helvetica, sans-serif;
-      background-color: #fff8f0;
       color: #333;
-      display: flex;
-      justify-content: center;
-      align-items: center;
       min-height: 100vh;
       text-align: center;
+    
+      background-image: url("Logo.png");
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 420px;
+      background-color: #fff8f0;
     }
 
     .container {
       max-width: 420px;
       padding: 30px;
+      background-color: rgba(255, 255, 255, 0.88);
+      border-radius: 18px;
     }
 
     img.logo {
@@ -76,7 +80,6 @@
   <div class="container">
 
     <!-- LOGO -->
-    <img src="Logo.png" alt="The Happy Panda Crafts Logo" class="logo" />
 
     <!-- BRAND NAME -->
     <h1>The Happy Panda Crafts 🐼</h1>
