--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     
       background-image: url("Logo.png");
       background-repeat: no-repeat;
-      background-position: center;
-      background-size: 420px;
-      background-color: #fff8f0;
+      background-position: center top;
+      background-size: 380px;
+      background-color: rgba(255,255,255,0.92);
     }
 
     .container {
