--- a/index.html
+++ b/index.html
@@ -7,25 +7,26 @@
 
   <style>
     body {
-      margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      color: #333;
-      min-height: 100vh;
-      text-align: center;
-    
-      background-image: url("Logo.png");
-      background-repeat: no-repeat;
-      background-position: center top;
-      background-size: 380px;
-      background-color: rgba(255,255,255,0.92);
-    }
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #333;
+  min-height: 100vh;
+  text-align: center;
+
+  background-image: url("logo-bg.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
 
     .container {
-      max-width: 420px;
-      padding: 30px;
-      background-color: rgba(255, 255, 255, 0.88);
-      border-radius: 18px;
-    }
+  max-width: 420px;
+  padding: 30px;
+  background-color: rgba(255, 255, 255, 0.85);
+  border-radius: 18px;
+  margin: 40px auto;
+}
 
     img.logo {
       width: 140px;
