--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   min-height: 100vh;
   text-align: center;
 
-  background-image: url("logo.png");
+  background-image: url("Logo.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
