--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       text-align: center;
     }
 
-    /* FULL LOGO SECTION */
+    /* HERO SECTION WITH LOGO */
     .hero {
       min-height: 100vh;
       background-image: url("Logo.png");
@@ -24,15 +24,16 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      padding: 20px;
     }
 
-    /* CONTENT BOX */
+    /* CENTERED BRAND CONTENT */
     .container {
       max-width: 420px;
       padding: 30px;
-      margin: 40px auto;
-      background-color: rgba(255, 255, 255, 0.9);
+      background-color: rgba(255, 255, 255, 0.82); /* opacity here */
       border-radius: 18px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.08);
     }
 
     h1 {
@@ -43,7 +44,7 @@
     h2 {
       font-size: 16px;
       font-weight: normal;
-      color: #777;
+      color: #666;
       margin-bottom: 22px;
     }
 
@@ -74,36 +75,35 @@
     .footer {
       margin-top: 30px;
       font-size: 13px;
-      color: #999;
+      color: #888;
     }
   </style>
 </head>
 
 <body>
 
-  <!-- LOGO SECTION (SCROLLABLE) -->
-  <div class="hero"></div>
+  <!-- LOGO + BRAND CONTENT -->
+  <div class="hero">
+    <div class="container">
+      <h1>The Happy Panda Crafts 🐼</h1>
+      <h2>Bringing smiles through craft</h2>
 
-  <!-- BRAND CONTENT -->
-  <div class="container">
-    <h1>The Happy Panda Crafts 🐼</h1>
-    <h2>Bringing smiles through craft</h2>
+      <p>
+        Handmade crochet creations crafted with love and care.
+        <br />
+        Custom orders are welcome.
+      </p>
 
-    <p>
-      Handmade crochet creations crafted with love and care.
-      <br />
-      Custom orders are welcome.
-    </p>
+      <div class="buttons">
 
-    <div class="buttons">
+        <a href="https://wa.me/91XXXXXXXXXX" class="whatsapp" target="_blank">
+          WhatsApp
+        </a>
+      </div>
 
-      <a href="https://wa.me/919922424880" class="whatsapp" target="_blank">
-        WhatsApp
-      </a>
-    </div>
-
-    <div class="footer">
-      🛠️ Website under development
+      <div class="footer">
+        🛠️ Website under development
+      </div>
     </div>
   </div>
 
