--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <!-- LOGO + BRAND CONTENT -->
   <div class="hero">
     <div class="container">
-      <h1>The Happy Panda Crafts 🐼</h1>
+      <h1>The Happy Panda Crafts </h1>
       <h2>Bringing smiles through craft</h2>
 
       <p>
