--- a/index.html
+++ b/index.html
@@ -1,111 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>The Happy Panda Crafts</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>The Happy Panda Crafts</title>
 
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      color: #333;
-      background-color: #f7f3ee;
-      text-align: center;
-    }
+<style>
+  body {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #f7f3ee;
+    color: #333;
+  }
 
-    /* HERO SECTION WITH LOGO */
-    .hero {
-      min-height: 100vh;
-      background-image: url("Logo.png");
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: contain;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 20px;
-    }
+  /* HEADER */
+  header {
+    position: sticky;
+    top: 0;
+    z-index: 10;
+    background: rgba(255,255,255,0.9);
+    backdrop-filter: blur(6px);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 12px 20px;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+  }
 
-    /* CENTERED BRAND CONTENT */
-    .container {
-      max-width: 420px;
-      padding: 30px;
-      background-color: rgba(255, 255, 255, 0.82); /* opacity here */
-      border-radius: 18px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.08);
-    }
+  .brand {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+  }
 
-    h1 {
-      font-size: 28px;
-      margin-bottom: 6px;
-    }
+  .brand img {
+    width: 42px;
+    height: 42px;
+    border-radius: 50%;
+  }
 
-    h2 {
-      font-size: 16px;
-      font-weight: normal;
-      color: #666;
-      margin-bottom: 22px;
-    }
+  .brand h1 {
+    font-size: 18px;
+    margin: 0;
+  }
 
-    p {
-      font-size: 15px;
-      line-height: 1.6;
-      margin-bottom: 25px;
-    }
+  .whatsapp-btn {
+    background-color: #25d366;
+    color: white;
+    padding: 10px 16px;
+    border-radius: 24px;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: bold;
+  }
 
-    .buttons a {
-      display: inline-block;
-      margin: 8px;
-      padding: 12px 20px;
-      text-decoration: none;
-      color: white;
-      border-radius: 25px;
-      font-size: 14px;
-    }
+  /* MAIN CONTENT */
+  main {
+    padding: 24px;
+  }
 
-    .instagram {
-      background-color: #e1306c;
-    }
+  /* GRID */
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    gap: 16px;
+  }
 
-    .whatsapp {
-      background-color: #25d366;
-    }
+  .card {
+    background: white;
+    border-radius: 14px;
+    overflow: hidden;
+    box-shadow: 0 6px 18px rgba(0,0,0,0.06);
+    aspect-ratio: 1 / 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #aaa;
+    font-size: 14px;
+  }
 
-    .footer {
-      margin-top: 30px;
-      font-size: 13px;
-      color: #888;
-    }
-  </style>
+  .card img,
+  .card video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  /* FOOTER NOTE */
+  .hint {
+    text-align: center;
+    margin-top: 30px;
+    font-size: 13px;
+    color: #888;
+  }
+</style>
 </head>
 
 <body>
 
-  <!-- LOGO + BRAND CONTENT -->
-  <div class="hero">
-    <div class="container">
-      <h1>The Happy Panda Crafts </h1>
-      <h2>Bringing smiles through craft</h2>
-
-      <p>
-        Handmade crochet creations crafted with love and care.
-        <br />
-        Custom orders are welcome.
-      </p>
-
-      <div class="buttons">
-
-        <a href="https://wa.me/91XXXXXXXXXX" class="whatsapp" target="_blank">
-          WhatsApp
-        </a>
-      </div>
-
-      <div class="footer">
-        🛠️ Website under development
-      </div>
-    </div>
+<!-- HEADER -->
+<header>
+  <div class="brand">
+    <img src="logo-bg.png" alt="Logo">
+    <h1>The Happy Panda Crafts</h1>
   </div>
+
+  <a href="https://wa.me/91XXXXXXXXXX" class="whatsapp-btn">
+    WhatsApp
+  </a>
+</header>
+
+<!-- MAIN -->
+<main>
+  <div class="grid">
+    <!-- SAMPLE CARDS -->
+    <div class="card">Photo</div>
+    <div class="card">Photo</div>
+    <div class="card">Video</div>
+    <div class="card">Photo</div>
+    <div class="card">Photo</div>
+    <div class="card">Video</div>
+    <div class="card">Photo</div>
+    <div class="card">Photo</div>
+  </div>
+
+  <div class="hint">
+    Scroll to explore our handmade creations 🧶
+  </div>
+</main>
 
 </body>
 </html>
