--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     width: 42px;
     height: 42px;
     border-radius: 50%;
+    object-fit: cover;
   }
 
   .brand h1 {
@@ -54,7 +55,7 @@
     font-weight: bold;
   }
 
-  /* MAIN CONTENT */
+  /* MAIN */
   main {
     padding: 24px;
   }
@@ -62,7 +63,7 @@
   /* GRID */
   .grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
     gap: 16px;
   }
 
@@ -72,11 +73,6 @@
     overflow: hidden;
     box-shadow: 0 6px 18px rgba(0,0,0,0.06);
     aspect-ratio: 1 / 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #aaa;
-    font-size: 14px;
   }
 
   .card img,
@@ -84,12 +80,18 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    display: block;
   }
 
-  /* FOOTER NOTE */
+  /* VIDEO FIXES */
+  video {
+    pointer-events: none; /* prevents accidental pause */
+  }
+
+  /* FOOTER TEXT */
   .hint {
     text-align: center;
-    margin-top: 30px;
+    margin: 30px 0;
     font-size: 13px;
     color: #888;
   }
@@ -101,7 +103,7 @@
 <!-- HEADER -->
 <header>
   <div class="brand">
-    <img src="logo-bg.png" alt="Logo">
+    <img src="Logo.png" alt="The Happy Panda Crafts Logo">
     <h1>The Happy Panda Crafts</h1>
   </div>
 
@@ -110,23 +112,43 @@
   </a>
 </header>
 
-<!-- MAIN -->
+<!-- MAIN CONTENT -->
 <main>
+
   <div class="grid">
-    <!-- SAMPLE CARDS -->
-    <div class="card">Photo</div>
-    <div class="card">Photo</div>
-    <div class="card">Video</div>
-    <div class="card">Photo</div>
-    <div class="card">Photo</div>
-    <div class="card">Video</div>
-    <div class="card">Photo</div>
-    <div class="card">Photo</div>
+
+    <!-- PHOTO -->
+    <div class="card">
+      <img src="images/photo1.jpg" alt="Crochet product">
+    </div>
+
+    <!-- VIDEO -->
+    <div class="card">
+      <video src="videos/video1.mp4" autoplay muted loop playsinline></video>
+    </div>
+
+    <div class="card">
+      <img src="images/photo2.jpg" alt="Crochet product">
+    </div>
+
+    <div class="card">
+      <video src="videos/video2.mp4" autoplay muted loop playsinline></video>
+    </div>
+
+    <div class="card">
+      <img src="images/photo3.jpg" alt="Crochet product">
+    </div>
+
+    <div class="card">
+      <img src="images/photo4.jpg" alt="Crochet product">
+    </div>
+
   </div>
 
   <div class="hint">
-    Scroll to explore our handmade creations 🧶
+    Scroll to explore our handmade crochet creations 🧶
   </div>
+
 </main>
 
 </body>
