--- a/index.html
+++ b/index.html
@@ -123,17 +123,17 @@
     </div>
 
     <!-- VIDEO -->
-    <div class="card">
+    <!-- <div class="card">
       <video src="videos/video1.mp4" autoplay muted loop playsinline></video>
-    </div>
+    </div> -->
 
     <div class="card">
       <img src="images/photo2.jpg" alt="Crochet product">
     </div>
 
-    <div class="card">
+    <!-- <div class="card">
       <video src="videos/video2.mp4" autoplay muted loop playsinline></video>
-    </div>
+    </div> -->
 
     <div class="card">
       <img src="images/photo3.jpg" alt="Crochet product">
@@ -141,6 +141,30 @@
 
     <div class="card">
       <img src="images/photo4.jpg" alt="Crochet product">
+    </div>
+
+    <div class="card">
+      <img src="images/photo5.jpg" alt="Crochet product">
+    </div>
+
+    <div class="card">
+      <img src="images/photo6.jpg" alt="Crochet product">
+    </div>
+
+    <div class="card">
+      <img src="images/photo7.jpg" alt="Crochet product">
+    </div>
+
+    <div class="card">
+      <img src="images/photo8.jpg" alt="Crochet product">
+    </div>
+
+    <div class="card">
+      <img src="images/photo9.jpg" alt="Crochet product">
+    </div>
+
+    <div class="card">
+      <img src="images/photo10.jpg" alt="Crochet product">
     </div>
 
   </div>
