--- a/index.html
+++ b/index.html
@@ -1,176 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>The Happy Panda Crafts</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The Happy Panda Crafts</title>
+    <style>
+        /* Reset default styles */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
-<style>
-  body {
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #f7f3ee;
-    color: #333;
-  }
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: #FFF8F0; /* Soft, cozy background */
+            color: #333;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            text-align: center;
+            padding: 20px;
+        }
 
-  /* HEADER */
-  header {
-    position: sticky;
-    top: 0;
-    z-index: 10;
-    background: rgba(255,255,255,0.9);
-    backdrop-filter: blur(6px);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 12px 20px;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-  }
+        .container {
+            max-width: 600px;
+            background: #fff;
+            padding: 40px 30px;
+            border-radius: 15px;
+            box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+        }
 
-  .brand {
-    display: flex;
-    align-items: center;
-    gap: 12px;
-  }
+        .logo {
+            max-width: 150px;
+            margin-bottom: 20px;
+        }
 
-  .brand img {
-    width: 42px;
-    height: 42px;
-    border-radius: 50%;
-    object-fit: cover;
-  }
+        h1 {
+            font-size: 2em;
+            margin-bottom: 10px;
+            color: #D2691E; /* Warm, crafty vibe */
+        }
 
-  .brand h1 {
-    font-size: 18px;
-    margin: 0;
-  }
+        .tagline {
+            font-size: 1.2em;
+            color: #A0522D;
+            margin-bottom: 25px;
+            font-style: italic;
+        }
 
-  .whatsapp-btn {
-    background-color: #25d366;
-    color: white;
-    padding: 10px 16px;
-    border-radius: 24px;
-    text-decoration: none;
-    font-size: 14px;
-    font-weight: bold;
-  }
+        p {
+            font-size: 1.1em;
+            margin-bottom: 20px;
+        }
 
-  /* MAIN */
-  main {
-    padding: 24px;
-  }
+        .emoji {
+            font-size: 2em;
+        }
 
-  /* GRID */
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
-    gap: 16px;
-  }
+        .footer {
+            font-size: 0.9em;
+            color: #888;
+        }
 
-  .card {
-    background: white;
-    border-radius: 14px;
-    overflow: hidden;
-    box-shadow: 0 6px 18px rgba(0,0,0,0.06);
-    aspect-ratio: 1 / 1;
-  }
+        /* Subtle animation */
+        .pulse {
+            display: inline-block;
+            animation: pulse 2s infinite;
+        }
 
-  .card img,
-  .card video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    display: block;
-  }
-
-  /* VIDEO FIXES */
-  video {
-    pointer-events: none; /* prevents accidental pause */
-  }
-
-  /* FOOTER TEXT */
-  .hint {
-    text-align: center;
-    margin: 30px 0;
-    font-size: 13px;
-    color: #888;
-  }
-</style>
+        @keyframes pulse {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.05); }
+            100% { transform: scale(1); }
+        }
+    </style>
 </head>
-
 <body>
+    <div class="container">
+        <!-- Logo -->
+        <img src="Logo.png" alt="Site Logo" class="logo">
 
-<!-- HEADER -->
-<header>
-  <div class="brand">
-    <img src="Logo.png" alt="The Happy Panda Crafts Logo">
-    <h1>The Happy Panda Crafts</h1>
-  </div>
+        <!-- Header and tagline -->
+        <h1>The Happy Panda Crafts </h1>
+        <div class="tagline">Bringing Smiles Through Crafts</div>
 
-  <a href="https://wa.me/91XXXXXXXXXX" class="whatsapp-btn">
-    WhatsApp
-  </a>
-</header>
+        <p class="pulse">Our cozy craft store is getting ready just for you! 🌸</p>
+        <p>Stay tuned for handcrafted products and patterns that inspire creativity.</p>
 
-<!-- MAIN CONTENT -->
-<main>
-
-  <div class="grid">
-
-    <!-- PHOTO -->
-    <div class="card">
-      <img src="images/photo1.jpg" alt="Crochet product">
+        <div class="footer">Site is under construction — we’ll be live soon!</div>
     </div>
-
-    <!-- VIDEO -->
-    <!-- <div class="card">
-      <video src="videos/video1.mp4" autoplay muted loop playsinline></video>
-    </div> -->
-
-    <div class="card">
-      <img src="images/photo2.jpg" alt="Crochet product">
-    </div>
-
-    <!-- <div class="card">
-      <video src="videos/video2.mp4" autoplay muted loop playsinline></video>
-    </div> -->
-
-    <div class="card">
-      <img src="images/photo3.jpg" alt="Crochet product">
-    </div>
-
-    <div class="card">
-      <img src="images/photo4.jpg" alt="Crochet product">
-    </div>
-
-    <div class="card">
-      <img src="images/photo5.jpg" alt="Crochet product">
-    </div>
-
-    <div class="card">
-      <img src="images/photo6.jpg" alt="Crochet product">
-    </div>
-
-    <div class="card">
-      <img src="images/photo7.jpg" alt="Crochet product">
-    </div>
-
-    <div class="card">
-      <img src="images/photo8.jpg" alt="Crochet product">
-    </div>
-
-    <div class="card">
-      <img src="images/photo9.jpg" alt="Crochet product">
-    </div>
-
-
-  </div>
-
-  <div class="hint">
-    Scroll to explore our handmade crochet creations 🧶
-  </div>
-
-</main>
-
 </body>
 </html>
+
