--- a/index.html
+++ b/index.html
@@ -4,134 +4,165 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>The Happy Panda Crafts</title>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
 *{box-sizing:border-box}
-body{margin:0;font-family:Poppins,system-ui,sans-serif;background:var(--bg,#faf6f1);color:#2d2d2d;overflow-x:hidden;transition:background .6s ease}
-
-/* ================= WOOL THREADS ================= */
-.threads{position:fixed;inset:0;z-index:1;pointer-events:none}
-.thread{position:absolute;top:0;height:90vh;width:18px;transform-origin:top center}
-.thread::before{content:"";position:absolute;inset:0;border-radius:14px 14px 20px 20px;background:
-  repeating-linear-gradient(
-    22deg,
-    rgba(255,255,255,.55) 0 1px,
-    rgba(0,0,0,.08) 1px 2px,
-    currentColor 3px 7px
-  );
-  box-shadow:
-    inset 1px 0 0 rgba(255,255,255,.4),
-    inset -1px 0 0 rgba(0,0,0,.12)
+html,body{margin:0;padding:0;width:100%;height:100%}
+body{
+  font-family:Poppins,system-ui,sans-serif;
+  /* Fixed background: 'contain' prevents stretching/cropping */
+  background: #faf6f1 url('image_58f7c2.jpg') no-repeat center bottom fixed;
+  background-size: contain; 
+  color:#2d2d2d;
+  overflow-x:hidden;
 }
-.thread::after{content:"";position:absolute;bottom:-10px;left:50%;width:14px;height:14px;background:currentColor;border-radius:50%;transform:translateX(-50%)}
-.t1{left:8%;color:#e76f51;animation:swayA 9s ease-in-out infinite}
-.t2{left:22%;color:#2a9d8f;animation:swayB 11s ease-in-out infinite}
-.t3{left:38%;color:#f4a261;animation:swayC 10s ease-in-out infinite}
-.t4{left:55%;color:#e9c46a;animation:swayA 12s ease-in-out infinite}
-.t5{left:70%;color:#457b9d;animation:swayB 13s ease-in-out infinite}
-.t6{left:85%;color:#b56576;animation:swayC 14s ease-in-out infinite}
-@keyframes swayA{0%{transform:rotate(0)}30%{transform:rotate(1.2deg)}55%{transform:rotate(-.8deg)}100%{transform:rotate(0)}}
-@keyframes swayB{0%{transform:rotate(0)}40%{transform:rotate(-1.4deg)}70%{transform:rotate(.9deg)}100%{transform:rotate(0)}}
-@keyframes swayC{0%{transform:rotate(0)}35%{transform:rotate(.7deg)}65%{transform:rotate(-1.1deg)}100%{transform:rotate(0)}}
 
-/* ================= WELCOME ================= */
-#welcome{position:fixed;inset:0;z-index:9999;display:flex;align-items:center;justify-content:center}
-#welcome::before{content:"";position:absolute;inset:0;background:url('Logo.png') center/contain no-repeat}
-#welcome::after{content:"";position:absolute;inset:0;background:rgba(0,0,0,.65)}
-.welcome-box{position:relative;z-index:2;background:rgba(255,255,255,.92);padding:44px 36px;border-radius:30px;text-align:center;max-width:90%}
-.welcome-box h1{margin:0 0 10px}
-.welcome-box button{margin-top:22px;padding:14px 34px;border-radius:30px;border:0;background:linear-gradient(135deg,#8e44ad,#c0392b);color:#fff;font-weight:600;cursor:pointer}
+/* ================= WELCOME SCREEN ================= */
+body.welcome-active #site{display:none}
+#welcome{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;z-index:10000;}
+#welcome-bg{position:absolute;inset:0;background:url('Logo.png') center/contain no-repeat;background-color:#000;}
+#welcome-overlay{position:absolute;inset:0;background:rgba(0,0,0,0.6);}
+.welcome-box{position:relative;z-index:2;background:rgba(255,255,255,0.92);padding:44px 38px;border-radius:30px;text-align:center;max-width:420px;box-shadow:0 20px 50px rgba(0,0,0,0.3); margin: 20px;}
+.welcome-box button{padding:14px 36px;border-radius:999px;border:none;background:linear-gradient(135deg,#8e44ad,#e84393);color:#fff;font-weight:600;cursor:pointer;}
 
-/* ================= SITE ================= */
-#site{position:relative;z-index:2}
-header{position:sticky;top:0;z-index:5;background:rgba(255,255,255,.85);backdrop-filter:blur(14px);padding:14px 22px;display:flex;align-items:center;gap:12px}
-header img{width:48px;height:48px;border-radius:14px}
+/* ================= SITE CONTAINER ================= */
+#site{
+    position:relative;
+    z-index:5;
+    max-width: 1200px; /* Prevents content from stretching too wide on desktop */
+    margin: 0 auto;
+}
 
-/* ================= CATEGORIES ================= */
-.categories{display:flex;justify-content:center;gap:14px;flex-wrap:wrap;padding:26px 22px;position:sticky;top:76px;z-index:4}
-.categories button{border:0;padding:10px 22px;border-radius:30px;background:rgba(255,255,255,.75);backdrop-filter:blur(10px);font-weight:500;cursor:pointer;transition:.35s}
-.categories button.active,.categories button:hover{background:var(--theme,#2a9d8f);color:#fff}
-.categories button{border:0;padding:10px 20px;border-radius:30px;background:rgba(255,255,255,.7);backdrop-filter:blur(10px);font-weight:500;cursor:pointer;transition:.3s}
-.categories button.active,.categories button:hover{background:#2a9d8f;color:#fff}
+header {
+  position:sticky;
+  top:0;
+  z-index:100;
+  background:rgba(255, 255, 255, 0.98);
+  padding:12px 22px;
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  box-shadow: 0 4px 15px rgba(0,0,0,0.08);
+}
+.header-left{display:flex; align-items:center; gap:12px;}
+header img{width:45px;height:45px;border-radius:10px}
+.contact-btn {
+  background:#25d366; 
+  color:white; 
+  text-decoration:none; 
+  padding:10px 20px; 
+  border-radius:50px; 
+  font-weight:600; 
+  font-size: 0.85rem;
+  white-space: nowrap;
+}
 
-/* ================= GRID ================= */
-.grid{padding:30px 22px 60px;display:grid;grid-template-columns:repeat(auto-fill,minmax(180px,1fr));gap:22px}
-.card{position:relative;background:rgba(255,255,255,.72);backdrop-filter:blur(14px);border-radius:28px;overflow:hidden;aspect-ratio:1/1;cursor:pointer;transition:transform .35s ease,box-shadow .35s ease}
-.card::after{content:"";position:absolute;inset:0;border-radius:28px;background:radial-gradient(120% 120% at 50% 0%,rgba(255,234,210,.55),transparent 60%);opacity:0;transition:opacity .35s ease;pointer-events:none}
-.card:hover{transform:translateY(-8px) scale(1.025);box-shadow:0 32px 80px rgba(0,0,0,.18)}
-.card:hover::after{opacity:1}
-.card img{width:100%;height:100%;object-fit:cover;display:block;transition:transform .6s ease}
-.card:hover img{transform:scale(1.06)}
-.card.hidden{display:none}
+/* ================= UI ELEMENTS ================= */
+.categories{ 
+    display:flex; 
+    gap:10px; 
+    justify-content:center; 
+    padding:25px 10px; 
+    flex-wrap: wrap; /* Allows buttons to wrap on small screens */
+}
+.category{ padding:8px 20px; border-radius:999px; background:#fff; border:1px solid #eee; font-weight:600; cursor:pointer; box-shadow: 0 2px 5px rgba(0,0,0,0.03); transition: 0.2s;}
+.category.active{ background:linear-gradient(135deg,#ff9a9e,#fad0c4); border-color:transparent; color: #fff; }
 
-/* ================= MODAL ================= */
-#modal{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;background:rgba(0,0,0,.85);opacity:0;pointer-events:none;z-index:100}
+.grid{
+  padding:10px 20px 80px; 
+  display:grid;
+  /* minmax(150px, 1fr) ensures cards shrink for mobile but don't stretch excessively */
+  grid-template-columns:repeat(auto-fill,minmax(180px,1fr)); 
+  gap:20px;
+}
+.card{
+  background:#ffffff;
+  border-radius:24px; 
+  overflow:hidden;
+  aspect-ratio:1/1; 
+  cursor:pointer;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+  transition: transform 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+.card:hover { transform: scale(1.03); }
+.card img{ width:100%; height:100%; object-fit:cover; }
+
+#modal{position:fixed; inset:0; display:flex; align-items:center; justify-content:center; background:rgba(0,0,0,.85); opacity:0; pointer-events:none; z-index:20000; transition: 0.3s;}
 #modal.active{opacity:1;pointer-events:auto}
-#modal-box{background:#fff;border-radius:26px;padding:22px;text-align:center;max-width:90%}
-#modal-box img{max-width:80vw;max-height:60vh;border-radius:18px;display:block}
-#waBtn{display:inline-block;margin-top:20px;padding:14px 34px;border-radius:40px;background:#25d366;color:#fff;font-weight:600;text-decoration:none}
+#modal-box{ background:#fff; border-radius:30px; padding:20px; text-align:center; max-width: 90%; max-height: 90vh; overflow-y: auto;}
+#modal-box img { border-radius: 20px; margin-bottom: 20px; width: 100%; max-height: 60vh; object-fit: contain;}
+
+/* Mobile Tweaks */
+@media (max-width: 480px) {
+    header h2 { font-size: 1rem; }
+    .grid { grid-template-columns: repeat(auto-fill, minmax(140px, 1fr)); gap: 12px; }
+}
 </style>
 </head>
-<body>
 
-<div class="threads">
-  <span class="thread t1"></span><span class="thread t2"></span><span class="thread t3"></span><span class="thread t4"></span><span class="thread t5"></span><span class="thread t6"></span>
-</div>
+<body class="welcome-active">
 
 <div id="welcome">
+  <div id="welcome-bg"></div>
+  <div id="welcome-overlay"></div>
   <div class="welcome-box">
     <h1>The Happy Panda Crafts 🐼</h1>
-    <p>Bringing smiles through handmade crochet</p>
-    <button onclick="enterSite()">Enter</button>
+    <p>Handmade Crochet with Love</p>
+    <button onclick="enterSite()">Enter Site</button>
   </div>
 </div>
 
 <div id="site">
-<header><img src="Logo.png"><h2>The Happy Panda Crafts</h2></header>
+<header>
+  <div class="header-left">
+    <img src="Logo.png" alt="Logo">
+    <h2>The Happy Panda Crafts</h2>
+  </div>
+  <a href="https://wa.me/91XXXXXXXXXX" class="contact-btn" target="_blank">Contact us</a>
+</header>
 
 <div class="categories">
-  <button class="active" onclick="filterCat('all')">All</button>
-  <button onclick="filterCat('toys')">Toys</button>
-  <button onclick="filterCat('keychains')">Keychains</button>
-  <button onclick="filterCat('decor')">Home Decor</button>
+  <div class="category active" data-cat="all">All</div>
+  <div class="category" data-cat="toys">Toys</div>
+  <div class="category" data-cat="decor">Decor</div>
+  <div class="category" data-cat="gifts">Gifts</div>
 </div>
 
-<div class="grid">
+<div class="grid" id="grid">
   <div class="card" data-cat="toys" data-img="images/photo1.jpg"><img src="images/photo1.jpg"></div>
-  <div class="card" data-cat="toys" data-img="images/photo2.jpg"><img src="images/photo2.jpg"></div>
-  <div class="card" data-cat="keychains" data-img="images/photo3.jpg"><img src="images/photo3.jpg"></div>
-  <div class="card" data-cat="decor" data-img="images/photo4.jpg"><img src="images/photo4.jpg"></div>
-  <div class="card" data-cat="decor" data-img="images/photo5.jpg"><img src="images/photo5.jpg"></div>
+  <div class="card" data-cat="decor" data-img="images/photo2.jpg"><img src="images/photo2.jpg"></div>
+  <div class="card" data-cat="gifts" data-img="images/photo3.jpg"><img src="images/photo3.jpg"></div>
+  <div class="card" data-cat="toys" data-img="images/photo4.jpg"><img src="images/photo4.jpg"></div>
 </div>
 </div>
 
 <div id="modal">
   <div id="modal-box">
     <img id="modalImg">
-    <a id="waBtn" target="_blank">Order on WhatsApp</a>
+    <br>
+    <a id="waBtn" target="_blank" style="display:inline-block;padding:12px 30px;border-radius:40px;background:#25d366;color:#fff;font-weight:600;text-decoration:none">Order via WhatsApp</a>
   </div>
 </div>
 
 <script>
-function enterSite(){document.getElementById('welcome').remove()}
-
-function filterCat(cat){
-  const themes={
-    all:{bg:'#faf6f1',theme:'#2a9d8f'},
-    toys:{bg:'#fff1f2',theme:'#e76f51'},
-    keychains:{bg:'#f1fbf9',theme:'#2a9d8f'},
-    decor:{bg:'#fff8e6',theme:'#e9c46a'}
-  }
-  document.documentElement.style.setProperty('--bg',themes[cat].bg)
-  document.documentElement.style.setProperty('--theme',themes[cat].theme)
-
-  document.querySelectorAll('.categories button').forEach(b=>b.classList.remove('active'))
-  event.target.classList.add('active')
-  document.querySelectorAll('.card').forEach(c=>{
-    c.classList.toggle('hidden',cat!=='all' && c.dataset.cat!==cat)
-  })
+function enterSite(){
+  document.body.classList.remove('welcome-active');
+  document.getElementById('welcome').style.display='none';
 }
+
+const cats=document.querySelectorAll('.category');
+const cards=document.querySelectorAll('.card');
+
+cats.forEach(btn=>{
+  btn.onclick=()=>{
+    cats.forEach(b=>b.classList.remove('active'));
+    btn.classList.add('active');
+    const cat=btn.dataset.cat;
+    cards.forEach(card=>{
+      card.style.display=(cat==='all'||card.dataset.cat===cat)?'block':'none';
+    });
+  }
+});
 
 const modal=document.getElementById('modal');
 const modalImg=document.getElementById('modalImg');
@@ -141,7 +172,7 @@ document.querySelectorAll('.card').forEach(c=>{
   c.onclick=()=>{
     const img=c.dataset.img;
     modalImg.src=img;
-    waBtn.href=`https://wa.me/91XXXXXXXXXX?text=Hi!%20I%20am%20interested%20in%20this%20product:%20${location.origin+'/'+img}`;
+    waBtn.href=`https://wa.me/91XXXXXXXXXX?text=Hi!%20Interested%20in:%20${encodeURIComponent(location.origin+'/'+img)}`;
     modal.classList.add('active');
   }
 });
@@ -151,4 +182,3 @@ modal.onclick=e=>{if(e.target===modal)modal.classList.remove('active')}
 
 </body>
 </html>
-
